--- a/kube/deployment.yml
+++ b/kube/deployment.yml
@@ -3,7 +3,7 @@ apiVersion: extensions/v1beta1 # for versions before 1.8.0 use apps/v1beta1
 kind: Deployment
 metadata:
   name: bitbucket-slack-bot
-  namespace: monitoring
+  namespace: default
   labels:
     app: bitbucket-slack-bot
     version: "{{.Version}}"
