--- a/kube/svc.yml
+++ b/kube/svc.yml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: bitbucket-slack-bot
-  namespace: monitoring
+  namespace: default
   labels:
     app: bitbucket-slack-bot
     collect-metrics: "true"
